<resources>
    <string name="app_name">NOYO</string>
    <string name="happy_experience">用心体验快乐</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>
    <string name="nick">昵称</string>
    <string name="username_or_email">用户名/邮箱</string>
    <string name="settings">设置</string>
    <string name="hint_search">搜索…</string>
    <string name="home">首页</string>
    <string name="all">大全</string>
    <string name="order">订单</string>
    <string name="my">我的</string>
    <string name="farm_rent">土地租赁</string>
    <string name="pre_sell">产品预售</string>
    <string name="tip_un_login">你还没有登录</string>
    <string name="tip_choose_location">请选择您所在的地区</string>
    <string name="market_condition">市场行情</string>
    <string name="unit_yuan_jin">(单位: 元/市斤)</string>
    <string name="more"><![CDATA[更多>>]]></string>
    <string name="format_price">￥%1$.2f</string>
    <string name="status_waiting_pay"><![CDATA[<b><font color="#ff4444">待支付</font></b>]]></string>
    <string name="status_paid"><![CDATA[<b><font color="#669900">已支付</font></b>]]></string>
    <string name="status_waiting_plant"><![CDATA[<b><font color="#0099cc">待种植</font></b>]]></string>
    <string name="status_planted"><![CDATA[<b><font color="#669900">已种植</font></b>]]></string>
    <string name="status_waiting_harvest"><![CDATA[<b><font color="#ffbb33">即将收获</font></b>]]></string>
    <string name="status_harvested"><![CDATA[<b><font color="#ff8800">已收获</font></b>]]></string>
    <string name="status_transport"><![CDATA[<b><font color="#999999">物流中</font></b>]]></string>
    <string name="status_delivered"><![CDATA[<b><font color="#CCCCCC">已交付</font></b>]]></string>
    <string name="status_cancelled"><![CDATA[<b><font color="#CCCCCC">已取消</font></b>]]></string>
    <string name="empty_order">暂无订单</string>
    <string name="tip_error">发生错误，请检查网络，然后重试</string>
    <string name="my_order">我的订单</string>
    <string name="modify_email">修改电子邮箱</string>
    <string name="modify_password">修改密码</string>
    <string name="logout">安全退出</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="confirm_modify">确认修改</string>
    <string name="origin_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="empty_goods">暂无商品</string>
</resources>
