<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_splash"
                xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bg_ht_white"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="25sp"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/happy_experience"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginPanel"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="invisible"
            tools:visibility="visible">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@color/bg_ht_white"
                    android:text="@string/login"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@color/bg_ht_white"
                    android:text="@string/register"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>